--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ionic/react": "^8.3.3",
     "antd": "^5.21.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
