--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "ionicons": "^7.4.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ionicons": "^4.2.1",
