--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@ionic/react": "^8.3.4",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
+    "firebase": "^11.0.2",
     "ionicons": "^7.4.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ionicons": "^4.2.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
