--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.6.0",
     "react-dom": "^18.3.1",
     "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.28.0",
