--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,51 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
+  "short_name": "AplicacionSGP",
+  "name": "App de Sistema de Gestión de Gastos",
+  "start_url": "index.html",
+  "background_color": "#2148C0",
+  "theme_color": "#2148C0",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "id": "appSGP",
+  "orientation": "portrait",
+  "icons": [
+      {
+          "src": "icons/favicon-16x16.png",
+          "sizes": "16x16",
+          "type": "image/png"
+      },
+      {
+          "src": "icons/favicon-32x32.png",
+          "sizes": "32x32",
+          "type": "image/png"
+      },
+      {
+          "src": "icons/logo-64x64.png",
+          "sizes": "64x64",
+          "type": "image/png"
+      },
+      {
+          "src": "icons/logo-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "icons/logo-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+      }
+  ],
+  "screenshots": [
+      {
+          "src": "screenshots/wide-screenshot.png",
+          "sizes": "1280x720",
+          "type": "image/png",
+          "form_factor": "wide"
+      },
+      {
+          "src": "screenshots/mobile-screenshot.png",
+          "sizes": "720x1280",
+          "type": "image/png",
+          "form_factor": "narrow"
+      }
+  ]
 }
